# rust-on-vercel-template

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
api/auth/: me.rs  signin.rs  signup.rs
api/routes/: products.rs
app/: layout.tsx  page.tsx
app/products/: page.tsx
components/: theme-provider.tsx  theme-toggle.tsx
lib/rust/: auth.rs  database.rs  generate_ts.rs  lib.rs  migrate.rs  repository.rs
migrations/: 001_create_users_table.sql
types/: models.ts
